# CCBacktester

./: CMakeLists.txt
src/: Backtester.h  Bar.h  CSVReader.h  Portfolio.h  Strategy.h  Trade.h  main.cpp
src/IO/: DataReader.cpp  DataReader.h
